@@ -11,6 +11,7 @@ Version 0.5.0~dev
 	* Added client buffer queue sizes statistics to JSON status.
 	* httpkiller: add --random-path option.
 	* Properly handle HTTP HEAD requests for streams.
+	* Properly handle parameters and query string in relay URLs.
 
 Version 0.4.0 Released on 2011/11/22
 
